# playground

./: .gitignore  README.md
cpp/: CMakeLists.txt
graph_problem/: 133.py  210.py
imageprocess/: 1.py  2.py
kaggle/housing_price/: feature_engineering.py  submission.csv  top2.py  tutorial.py
machine_learning/basic/: python_for_data_analysis_ch11.py  python_for_data_analysis_ch12.py  python_for_data_analysis_ch7.py  python_for_data_analysis_ch9.py
mnist/: baseline.py  conv.py  linear.py  mlp.py  mlp_dann.py  test.py
opencv/: guifeature.py
pytorch/: README.md  model.pth  tensorboard_tutorial.py
slam/: CMakeLists.txt  basiccv.cpp  joinMap.cpp  newton.cpp  stereoVision.cpp  undistortImage.cpp
slam/python/: associate.py  basiccv.py
slam/python/calibration/images/: calibration.py
slam/python/calibration/images/undistort/: calibration.py
slam/python/calibration/results/: intrinsicmatrix.txt
tensorflow/: README.md
tensorflow/ch9/: sgd_hand.py
xgboost/basic/: 1.ipynb
